<resources>
    <string name="app_name">Pruebas 1</string>

    <!-- Separadores y marcadores -->
    <string name="sensores">Sensores</string>
    <string name="ig">Interfaz gráfica</string>
    <string name="hilosCorrutinas">Hilos y corrutinas</string>
    <string name="multimedia">Multimedia</string>
    <string name="bd">Bases de datos y datos</string>
    <string name="elementosExternos">Elementos externos</string>

    <string-array name="marcadores">
        <item>Nada</item>
        <item>Sensores</item>
        <item>Interfaz gráfica</item>
        <item>Hilos y corrutinas</item>
        <item>Multimedia</item>
        <item>Bases de datos y datos</item>
        <item>Elementos externos</item>
    </string-array>

    <!-- Barra inferior menu -->
    <string name="menu">Menu</string>
    <string name="codigo">Código</string>
    <string name="acerca">Acerca</string>
    <string name="opciones">Opciones</string>
    <string name="cerrar">Cerrar</string>

    <!-- Barra superior -->
    <string name="titulo">Título</string>
    <string name="volver">Volver</string>
    <string name="info2">Info</string>

    <!-- Otros -->
    <string name="vacio">#</string>
    <string name="botones">Botones</string>
    <string name="cuadro_dialogo">Cuadro de dialogo</string>
    <string name="error">ERROR</string>
    <string name="aceptar">Aceptar</string>
    <string name="fin">Fin</string>
    <string name="irA">Ir hasta</string>
    <string name="logo">Logotipo</string>

    <!-- Explicaciones -->
    <string name="info">Información</string>
    <string name="instruc">Instrucciones</string>

    <!-- FantasmaActivity -->
    <string name="fantasma_on">Fantasma - OnTouchListener</string>
    <string name="fantasma">Fantasma</string>
    <string name="vela">Vela</string>
    <string name="ins_fantasma">Al arrastrar el dedo por la pantalla se moverá la vela y el fantasma huirá.\nO al menos eso es lo que debería suceder.</string>
    <string name="ref_fantasma">Clase: FantasmaActivity\nLayer: activity_fantasma</string>

    <!-- LuzSensor -->
    <string name="sensor_luz">Sensor de luz - SensorEventListener</string>
    <string name="luz">Sensor de luz</string>
    <string name="ins_luz">Para esta prueba se usa el sensor de luz, conforme más luz haya, más cargada estará la barra de progreso.</string>
    <string name="ref_luz">Clase: LuzSensorActivity\nLayer: activity_luz_sensor\nManifest: android.hardware.sensor.acelerometer</string>
    <string name="valor_luz">Valor del sensor</string>
    <string name="fallo_luz">Fallo con el sensor de la luz.</string>

    <!-- UiActivity -->
    <string name="ui">Elementos UI</string>
    <string name="elementos_ui">Elementos UI - res/drawable</string>
    <string name="ins_ui">"A continuación se muestran varios elementos de la interfaz de usuario (UI).</string>
    <string name="ref_ui">Clase: UiActivity\nLayer: activity_ui</string>
    <string name="has_pulsado_btn">Has pulsado el boton</string>
    <string name="titulo_cuadro">Cuadro de diálogo</string>
    <string name="mensaje_cuadro">Este es el mensaje del cuadro de dialogo</string>

    <string name="graficas">Graficas</string>

    <string name="animaciones">Animaciones</string>

    <!-- Corrutinas -->
    <string name="corrutinas">Corrutinas</string>
    <string name="ins_corrutinas">Pulsa el boton "Cuenta atras" y hará una cuenta regresiva.\nPulsa después el boton "Mensaje Toast" y veras que no se bloquea.\n\nUna corrutina es un subproceso que se realiza en el mismo hilo.\nUna de las ventajas de usar subrutinas es que no bloquean toda la aplicación mientras trabajan, ya que operan en paralelo al hilo principal.</string>
    <string name="ref_corrutinas">Clase: Corrutinas\nLayer: activity_corrutinas</string>
    <string name="cuentaAtras">Cuenta atras</string>
    <string name="mensajeToast">Mensaje toast</string>
    <string name="mensajeCorrutinas">Como puedes ver se puede ejecutar ambas cosas a la vez, si no lo ves pulsa el boton de arriba.\nVeces pulsadas </string>


    <string name="sonidoMusica">Sonidos y música</string>

    <!-- Base de datos con ROOM -->
    <string name="bdConRoom">Base de datos con ROOM</string>
    <string name="ref_bd">Clase: BDActivity\nLayer: activity_bd\n\nClases modelo:\n - Emple\n - Depart\n\nClase controladora de la BD:\nBD_emple_depart\n\nBD precargada:\nassets/bd/emple_depart.bd</string>
    <string name="ins_bd">Para este ejemplo se parte de una BD prepoblada la cual puedes modificar a tu antojo. Se trata de dos tablas, es sencillo, por un lado los empleados y por otra los departamentos. Un empleado solo puede estar en un departamento y en un departamento puede haber varios empleados.\n\nPuedes hacer varias cosas con la BD.\n - La primera consultar. Puedes seleccionar un departamento y acto seguido se mostraran los empleados asociados a ella.\n\n - La segunda puedes insertar un nuevo empleado siempre y cuando el nombre del empleado no exista, selecciona el departamento al que quieras que pertenezca y pulsa insertar.\n\n - La tercera puedes eliminar el empleado escribiendo su nombre o bien seleccionandolo de la lista y haciendo clic en Eliminar.</string>

    <string name="nombre_emple">Nombre del empleado</string>
    <string name="anonimo">Anonimo</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="departamento">Selecciona un departamento</string>
    <string name="esta_vacio">El campo de texto esta vacio.</string>
    <string name="existe_emple">Ya existe un empleado con ese nombre, usa otro.</string>
    <string name="no_existe_emple">Ese empleado no existe.</string>

    <!-- Datos (guardar y cargar) -->
    <string name="guardarCargar">Guardar y cargar datos</string>
    <string name="ins_guarda_carga">"En este ejemplo podrás guardar y cargar dos valores, el primero es un booleano que como bien sabrás solo puede tomar dos valores true o false, el segundo es un valor entero el cual está limitado a 100 y que podrás controlar mediante la barra de desplazamiento o SeekBar.\n\nCuando pulses 'Guardar' se almacenarán los valores en la memoria interna y cuando pulses 'Cargar' obtendra esos valores de la memoria y los mostrará.\n\nSi sales y vuelves a entrar de la actividad o bien cierras la aplicación, verás que si guardaste los datos aún permaneceran ahí.</string>
    <string name="ref_guarda_carga">Clase: DatosActivity\nLayer: activity_datos\n\nClases modelo: GuardarCargar, DatosGuardado</string>
    <string name="op1">Opcion 1 - Boolean (true/false)</string>
    <string name="op2">Opcion 2 - Int (número entero)</string>
    <string name="guardar">Guardar</string>
    <string name="cargar">Cargar</string>
    <string name="datosGuardados">Datos guardados correctamente.</string>
    <string name="errorAlGuardar">Ocurrio un fallo al guardar.</string>
    <string name="datosCargados">Datos cargados correctamente.</string>
    <string name="errorAlCargar">Ocurrio un fallo al cargar. Se cargaron los datos por defecto.</string>


    <!-- Uso de publicidad en las aplicaciones -->
    <string name="publicidad">Uso de publicidad</string>
    <string name="banner_inferior">Aquí aparecerá el banner.</string>
    <string name="cargar_anuncio_bonif">Mostrar anuncio de bonificación.</string>
    <string name="consola">Consola</string>

    <string name="bnMostrado">Anuncio banner mostrado. + </string>
    <string name="bnFallido">Anuncio banner fallido.</string>
    <string name="bnAbierto">Anuncio banner abierto. + </string>
    <string name="bnTocado">Anuncio banner tocado. + </string>
    <string name="bnCancelado">Anuncio banner cancelado.</string>
    <string name="bnCerrado">Anuncio banner cerrado.</string>

    <string name="bfCargado">Anuncio de bonificacion cargado (boton habilitado).</string>
    <string name="bfAbierto">Anuncio de bonificacion abierto.</string>
    <string name="bfComenzado">Anuncio de bonificacion comenzado.</string>
    <string name="bfCerrado">Anuncio de bonificacion cerrado (pedir otro video).</string>
    <string name="bfVisto">Anuncio de bonificacion visto. + </string>
    <string name="bfDejado">Anuncio de bonificacion dejado (aplicacion cerrada).</string>
    <string name="bfNoCargado">Anuncio de bonificacion no cargado (¿Wifi apagado?).</string>
    <string name="bfCompletado">Anuncio de bonificacion completado.</string>

    <!-- Sonidos y musica -->
    <string name="ins_musica_efectos">Al pulsar sobre los botones de play se ejecutara un sonido o una musica.\nPuedes controlar los canales izquierdo y derecho usando las barras de desplazamiento.\n\nSe ha empleado mediaPlayer para la musica y soundPool para los sonidos cortos.</string>
    <string name="ref_musica_efectos">Clases: SonidosMusicaActivity, ControlMusica, ControlSonido \n\nLayer: activity_sonidos_musica\n\nLos sonidos y la musica se almacenan en la carpeta res/raw/</string>
    <string name="advertencia_efectos">Los efectos de sonido estan deshabilitados, ve a opciones de la aplicación y actívalos.</string>
    <string name="desc_play">Boton reproduccir.</string>
    <string name="musica">Musica</string>
    <string name="volumenIzq">Volumen izquierdo</string>
    <string name="volumenDcho">Volumen derecho</string>

    <!-- Acerca de -->
    <string name="acercaDe">Esta aplicación ha sido creada con fines didácticos, a fin de aprender y transmitir lo aprendido.\n\nDatos técnicos\n - Versión de Android Studio 4.0.1\n - Versión de Kotlin 1.3.72\n - API 23 \n\nAplicación creada por Carlos Aguirre\n\nTambién doy las gracias a\n - Jorgesys (Stack Overflow)</string>

    <!-- Fragmento Opciones -->
    <string name="efectos">Efectos de sonido</string>
    <string name="restablecer">Restablecer</string>
    <string name="guardadoCorrectamente">Datos guardados correctamente</string>
    <string name="guardadoFallido">Ocurrió un fallo al guardar</string>

</resources>
