<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgTitulo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/titulo"
        android:padding="15dp"
        android:src="@drawable/ic_titulo_pruebas_1" />

    <TextView
        style="@style/Separador"
        android:text="@string/sensores" />

    <Button
        android:id="@+id/btnFantasma"
        style="@style/ButtonNormal"
        android:text="@string/fantasma_on" />

    <Button
        android:id="@+id/btnLuzSensor"
        style="@style/ButtonNormal"
        android:text="@string/sensor_luz" />

    <TextView
        style="@style/Separador"
        android:layout_marginTop="15dp"
        android:text="@string/ig" />

    <Button
        android:id="@+id/btnUI"
        style="@style/ButtonNormal"
        android:text="@string/elementos_ui" />

    <Button
        android:id="@+id/btnAnimaciones"
        style="@style/ButtonNormal"
        android:backgroundTint="@color/colorLightGray"
        android:text="@string/animaciones" />

    <TextView
        style="@style/Separador"
        android:layout_marginTop="15dp"
        android:text="@string/hilosCorrutinas" />

    <Button
        android:id="@+id/btnCorrutinas"
        style="@style/ButtonNormal"
        android:text="@string/corrutinas" />

    <TextView
        style="@style/Separador"
        android:layout_marginTop="15dp"
        android:text="@string/multimedia" />

    <Button
        android:id="@+id/btnSndMsc"
        style="@style/ButtonNormal"
        android:text="@string/sonidoMusica" />

    <TextView
        style="@style/Separador"
        android:layout_marginTop="15dp"
        android:text="@string/bd" />

    <Button
        android:id="@+id/btnBd"
        style="@style/ButtonNormal"
        android:backgroundTint="@color/colorLightGray"
        android:text="@string/bdConRoom" />

    <Button
        android:id="@+id/btnGuardarCargar"
        style="@style/ButtonNormal"
        android:backgroundTint="@color/colorLightGray"
        android:text="@string/guardarCargar" />

    <TextView
        style="@style/Separador"
        android:layout_marginTop="15dp"
        android:text="@string/elementosExternos" />

    <Button
        android:id="@+id/btnPublicidad"
        style="@style/ButtonNormal"
        android:backgroundTint="@color/colorLightGray"
        android:text="@string/publicidad" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>