<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.actividades.DatosActivity">

    <include
        android:id="@+id/iBarraSuperior"
        layout="@layout/barra_superior" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iBarraSuperior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkGuardado"
                style="@style/TextoLectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/op1" />

            <TextView
                android:id="@+id/lblSeek"
                style="@style/TextoLectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkGuardado"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/op2" />

            <SeekBar
                android:id="@+id/seekNumEntero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblSeek"
                android:max="100"
                android:padding="10dp" />

            <TextView
                android:id="@+id/lblValorSeek"
                style="@style/TextoLectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekNumEntero"
                android:padding="10dp"
                android:text="@string/vacio"
                android:textAlignment="center"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lyGuardaCarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblValorSeek"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    style="@style/ButtonBasic"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_sd"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnCargar"
                    style="@style/ButtonBasic"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_up"
                    android:text="@string/cargar" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>